--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+
+		<link rel="StyleSheet" href="Stylle.css">
+	</head>
 		<body>
 		<div style="border:1px; border-style:solid;margin:10 px">
 		<div style="margin :7px">
-		  
+
+			<div class="page_header">
 			<h1> My First Web Page </h1>
+			</div>
 			<a name= "contents">
-			<font size="5"> <strong> Table of Contents</strong> </font>
+				<font size="5"> <strong> Table of Contents</strong> </font>
 			</a>
-			
 			<p><a href =#Resume> Resume</a><p>
 			
 			<p><a href =#Professional> Professional</a><p>
